service-config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80 # This is the port exposed by the service
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080 # This is the port exposed by the service
